0.7.0 - currently working on
- [#3516] Feature: Extend oelib_db::selectSingle to accept orderBy and offset
- [#3460] Fix: Locale configcheck crashes TYPO3 Winstaller
- [#3500] Fix: Don't crash the priceViewHelper if the currency has not been set or is invalid
- [#3508] Cleanup: Replace space + tab with tab
- [#3488] Fix: tx_oelib_db::count returns a string instead of an integer
- [#3492] Feature: Add a price view helper
- [#3487] Feature: Add MapperRegistry::set
- [#3490] Feature: Add model and mapper for static_currencies
- [#3491] Change: Allow prices with 3 decimal digits
- [#3482] Feature: Add a method getAsMultidimensionalArray() to tx_oelib_Configuration
- [#3471] Fix: Test failure in tx_oelib_configurationCheck_testcase
- [#3457] Fix: The language functions of the BE-user model return the default not the selected language
- [#3245] Feature: Add a model + mapper for BE user groups
- [#3444] Fix: A model cannot have a relation to itself
- [#3443] Fix: getSubpart('foo') fails if there is text after the marker in the template
- [#3442] Fix: Documentation wrong about getPrefixedMarkers
- [#3295] Feature: Add getPageUid to tx_oelib_Model
- [#3430] Feature: Add a function createBackEndUserGroup to the testingFramework
- [#3332] Fix: Unused variable $children in tx_oelib_Visibility_Tree_testcase::test_makeNodesVisibleForGivenNode_MakesThisNodeVisible
- [#3412] Fix: db::retrieveColumnsForTable and ::getTcaForTable need to check for the existence of the table
- [#3411] Feature: Add tx_oelib_templatehelper::ensureIntegerArrayValues
- [#3413] Fix: Some functions in oelib_db are missing the "static" keyword
- [#2311] Feature: Add tx_oelib_db::count
- [#3405] Feature: Add Model_FrontEndUser::getAge
- [#3388] Fix: Autoloader does not load XCLASS
- [#3387] Feature: Add accessors for the date of birth
- [#3370] Fix: Models should be marked as dead on __destruct
- [#3384] Fix: Add XCLASS stuff for the PEAR and emogrifier classes